--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram" aria-hidden="true"></i>
+    <div class="hero">
+      <p>Hello, I'm</p>
+      <h1>Svitlana Nesterenko</h1>
+      <h2 class="mb-5">Front-end Developer, based in Gdansk, Poland</h2>
     </div>
   </body>
 </html>
