--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
   </head>
   <body>
     <div class="hero">
-      <p>Hello, I'm</p>
+      <p>👋 Hello, I'm</p>
       <h1>Svitlana Nesterenko</h1>
       <h2 class="mb-5">Front-end Developer, based in Gdansk, Poland</h2>
+    </div>
+    <div>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
