--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <img src="images/logo.png" alt="schecodes logo" />
+    </header>
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Svitlana Nesterenko</h1>
