--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png" alt="schecodes logo" />
+      <img src="images/logo.png" alt="schecodes logo" class="logo" />
     </header>
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Svitlana Nesterenko</h1>
       <h2 class="mb-5">Front-end Developer, based in Gdansk, Poland</h2>
-    </div>
-    <div>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
