--- a/index.html
+++ b/index.html
@@ -31,11 +31,93 @@
       <img src="images/logo.png" alt="schecodes logo" class="logo" />
     </header>
     <div class="hero">
-      <p>👋 Hello, I'm</p>
+      <h2>👋 Hello, I'm</h2>
       <h1>Svitlana Nesterenko</h1>
-      <h2 class="mb-5">Front-end Developer, based in Gdansk, Poland</h2>
+      <h3 class="mb-5 sybtitle">
+        Front-end Developer, based in Gdansk, Poland
+      </h3>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="#" class="btn link-button">Contact me</a>
+      </div>
+    </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/yogurt.png"
+            class="img-fluid"
+            alt="Yougurt Application"
+          />
+        </div>
+        <div class="col">
+          <div class="project description">
+            <h2 class="pt-3 mb-5 text-center text-md-start">Yogurt Project</h2>
+            <p class="mb-3 text-center text-md-start text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a
+              href="#"
+              class="project-link d-inline-block project-button text-center text-md-start"
+              >Learn more</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row mb-sm-5">
+        <div class="col text-center text-md-start content-block">
+          <h2 class="pt-3 mb-5 text-center text-md-start">Weather app</h2>
+          <p class="mb-3 text-center text-md-start text-muted">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+            atque fuga neque possimus quisquam esse, enim quae aliquid pariatur
+            magni maiores eveniet adipisci aperiam beatae tenetur facere
+            cupiditate? Animi, qui.
+          </p>
+          <a
+            href="#"
+            class="project-link d-inline-block project-button text-center text-md-start"
+            >Learn more</a
+          >
+        </div>
+        <div class="col-lg-6">
+          <img
+            src="images/weather.png"
+            alt="Weather Project"
+            class="img-fluid d-none d-lg-block"
+          />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/dictionary.png"
+            class="img-fluid"
+            alt="Dictionary Project"
+          />
+        </div>
+        <div class="col">
+          <div class="project description">
+            <h2 class="pt-3 mb-5 text-center text-md-start">
+              Dictionary Project
+            </h2>
+            <p class="mb-3 text-center text-md-start text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a
+              href="#"
+              class="project-link d-inline-block project-button text-center text-md-start"
+              >Learn more</a
+            >
+          </div>
+        </div>
       </div>
     </div>
   </body>
