--- a/index.html
+++ b/index.html
@@ -28,7 +28,27 @@
   </head>
   <body>
     <header>
-      <img src="images/logo.png" alt="schecodes logo" class="logo" />
+      <nav class="d-flex justify-content-between">
+        <a href="index.html" title="ScheCodes logo"
+          ><img class="img-fluid logo" src="images/logo.png" alt="logo"
+        /></a>
+        <ul>
+          <li class="me-1 me-sm-3">
+            <a class="active" href="index.html" title="Homepage Svitlanka"
+              >Home</a
+            >
+          </li>
+          <li class="me-1 me-sm-3">
+            <a href="about.html" title="About page">About</a>
+          </li>
+          <li class="me-1 me-sm-3">
+            <a href="projects.html" title="Projects page">Projects</a>
+          </li>
+          <li class="me-1 me-sm-3">
+            <a href="about.html#contact" title="Contact page">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="hero">
       <h2>👋 Hello, I'm</h2>
@@ -37,7 +57,7 @@
         Front-end Developer, based in Gdansk, Poland
       </h3>
       <div>
-        <a href="#" class="btn link-button">Contact me</a>
+        <a href="about.html#contact" class="btn link-button">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -94,16 +114,12 @@
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img
-            src="images/dictionary.png"
-            class="img-fluid"
-            alt="Dictionary Project"
-          />
+          <img src="images/yoga.png" class="img-fluid" alt="Yoga Application" />
         </div>
         <div class="col">
           <div class="project description">
             <h2 class="pt-3 mb-5 text-center text-md-start">
-              Dictionary Project
+              Yoga Application
             </h2>
             <p class="mb-3 text-center text-md-start text-muted">
               Far far away, behind the word mountains, far from the countries
