--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header>
       <nav class="d-flex justify-content-between">
-        <a href="index.html" title="ScheCodes logo"
+        <a href="index.html" title="Svitlana Nesterenko Personal Page"
           ><img class="img-fluid logo" src="images/logo.png" alt="logo"
         /></a>
         <ul>
@@ -61,7 +61,7 @@
       </div>
     </div>
     <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
+      Quick sight on the projects I have already created
     </p>
     <div class="container">
       <div class="row mb-5">
@@ -76,10 +76,9 @@
           <div class="project description">
             <h2 class="pt-3 mb-5 text-center text-md-start">Yogurt Project</h2>
             <p class="mb-3 text-center text-md-start text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Find the time to learn more about the yogurt! Healthy tips for
+              everydayness. Order the fresh fermented dairy products from the
+              best producers!
             </p>
             <a
               href="#"
@@ -93,10 +92,9 @@
         <div class="col text-center text-md-start content-block">
           <h2 class="pt-3 mb-5 text-center text-md-start">Weather app</h2>
           <p class="mb-3 text-center text-md-start text-muted">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-            atque fuga neque possimus quisquam esse, enim quae aliquid pariatur
-            magni maiores eveniet adipisci aperiam beatae tenetur facere
-            cupiditate? Animi, qui.
+            The fastest and simplest way to get actual information about the
+            weather of the place You are looking for! Bonus: the application
+            displays the actual weather of Your current location..
           </p>
           <a
             href="#"
@@ -122,10 +120,9 @@
               Yoga Application
             </h2>
             <p class="mb-3 text-center text-md-start text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              Explore the best application for Your Yoga practices! A lot of
+              exercises and advices from the famous Yoga Guru, everything to
+              improve Your lifestyle!
             </p>
             <a
               href="#"
