--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
   <body>
     <header>
       <nav class="d-flex justify-content-between">
-        <a href="index.html" title="ScheCodes logo"
+        <a href="index.html" title="Svitlana Nesterenko Personal Page"
           ><img class="img-fluid logo" src="images/logo.png" alt="logo"
         /></a>
         <ul>
@@ -60,6 +60,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
+          <h3 class="text-center">Yoga Application</h3>
           <img
             src="images/yoga.png"
             class="img-fluid p-2 shadow rounded"
@@ -67,6 +68,7 @@
           />
         </div>
         <div class="col-sm-4">
+          <h3 class="text-center">Weather Application</h3>
           <img
             src="images/weather.png"
             class="img-fluid p-2 shadow rounded"
@@ -74,6 +76,7 @@
           />
         </div>
         <div class="col-sm-4">
+          <h3 class="text-center">Yogurt Application</h3>
           <img
             src="images/yogurt.png"
             class="img-fluid p-2 shadow rounded"
@@ -82,15 +85,8 @@
         </div>
       </div>
     </div>
-    <div id="contact">
-      <h2 class="contact-form">📮 Contact me</h2>
-      <a
-        href="mailto:svitlanka.tus@gmail.com"
-        class="email-link"
-        title="Contact Svitlana Nesterenko"
-      >
-        svitlanka.tus@gmail.com
-      </a>
+    <div class="text-center">
+      <a href="about.html#contact" class="link-button">Contact me</a>
     </div>
   </body>
 </html>
