--- a/about.html
+++ b/about.html
@@ -32,7 +32,9 @@
         /></a>
         <ul>
           <li class="me-1 me-sm-3">
-            <a class="active" href="index.html" title="home page">Home</a>
+            <a class="active" href="index.html" title="Homepage Svitlanka"
+              >Home</a
+            >
           </li>
           <li class="me-1 me-sm-3">
             <a href="about.html" title="About page">About</a>
