--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
           My path in IT started from the workshops on SheCodes.io platform. That
           is the best platform for every woman who wants to learn how to create
           the best designed sites and applications. A lot of useful information,
-          interesting challenges and homeworks, 24/7 support. You caan find out
+          interesting challenges and homeworks, 24/7 support. You can find out
           the projects which I created with SheCodes here, on this site.
         </p>
         <div>
