--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      title="Svitlana Nesterenko Front-End Developer Website"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +28,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>About Svitlana Nesterenko</title>
   </head>
   <body>
     <header>
@@ -34,7 +38,10 @@
         /></a>
         <ul>
           <li class="me-1 me-sm-3">
-            <a class="active" href="index.html" title="Homepage Svitlanka"
+            <a
+              class="active"
+              href="index.html"
+              title="Homepage Svitlana Nesterenko"
               >Home</a
             >
           </li>
