--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      title="Svitlana Nesterenko Front-End Developer Website"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +28,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Homepage Svitlana Nesterenko</title>
   </head>
   <body>
     <header>
@@ -34,7 +38,10 @@
         /></a>
         <ul>
           <li class="me-1 me-sm-3">
-            <a class="active" href="index.html" title="Homepage Svitlanka"
+            <a
+              class="active"
+              href="index.html"
+              title="Homepage Svitlana Nesterenko"
               >Home</a
             >
           </li>
@@ -81,7 +88,7 @@
               best producers!
             </p>
             <a
-              href="#"
+              href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/136/457/original/yougurt.html?1662715434"
               class="project-link d-inline-block project-button text-center text-md-start"
               >Learn more</a
             >
@@ -97,7 +104,7 @@
             displays the actual weather of Your current location..
           </p>
           <a
-            href="#"
+            href="https://gregarious-griffin-cef4a3.netlify.app/"
             class="project-link d-inline-block project-button text-center text-md-start"
             >Learn more</a
           >
@@ -125,7 +132,7 @@
               improve Your lifestyle!
             </p>
             <a
-              href="#"
+              href="absent.html"
               class="project-link d-inline-block project-button text-center text-md-start"
               >Learn more</a
             >
@@ -133,5 +140,17 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="links-box text-center">
+        <p class="source-link" class="text-center text-muted">
+          ✌This website was coded by Svitlana Nesterenko and is
+          <span
+            ><a href="https://github.com/Svitlanka12345/SheCodes-Portfolio"
+              >open-sourced</a
+            ></span
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
