--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      title="Svitlana Nesterenko Front-End Developer Website"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +28,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Projects Page</title>
   </head>
   <body>
     <header>
@@ -60,7 +64,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <h3 class="text-center">Yoga Application</h3>
+          <h3 class="text-center">
+            <a href="absent.html" style="text-decoration: none; color: black"
+              >Yoga Application</a
+            >
+          </h3>
           <img
             src="images/yoga.png"
             class="img-fluid p-2 shadow rounded"
@@ -68,19 +76,32 @@
           />
         </div>
         <div class="col-sm-4">
-          <h3 class="text-center">Weather Application</h3>
+          <h3 class="text-center">
+            <a
+              href="https://gregarious-griffin-cef4a3.netlify.app/"
+              style="text-decoration: none; color: black"
+              >Weather Project
+            </a>
+          </h3>
           <img
             src="images/weather.png"
             class="img-fluid p-2 shadow rounded"
-            alt="Weather Application"
+            alt="Weather Project"
           />
         </div>
         <div class="col-sm-4">
-          <h3 class="text-center">Yogurt Application</h3>
+          <h3 class="text-center">
+            <a
+              href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/136/457/original/yougurt.html?1662715434"
+              style="text-decoration: none; color: black"
+            >
+              Yogurt Project
+            </a>
+          </h3>
           <img
             src="images/yogurt.png"
             class="img-fluid p-2 shadow rounded"
-            alt="Fresh Yogurt Application"
+            alt="Fresh Yogurt Project"
           />
         </div>
       </div>
@@ -88,5 +109,17 @@
     <div class="text-center">
       <a href="about.html#contact" class="link-button">Contact me</a>
     </div>
+    <footer>
+      <div class="links-box text-center">
+        <p class="source-link" class="text-center text-muted">
+          ✌This website was coded by Svitlana Nesterenko and is
+          <span
+            ><a href="https://github.com/Svitlanka12345/SheCodes-Portfolio"
+              >open-sourced</a
+            ></span
+          >
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
